--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="assets/images/avatar-jessica.jpeg" alt="photo">
+    <img src="avatar-jessica.jpeg" alt="photo">
     <div class="about-container">
       <h2>Jessica Randall</h2>
       <h5>London, United Kingdom</h5>
